--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "bottender": "1.0.0",
+    "bottender": "^1.0.3",
     "date-fns": "^2.8.1",
     "dialogflow": "^1.0.0",
     "moment": "^2.24.0"
