upgrade to 1.2.0 official release

--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "test": "jest"
   },
   "dependencies": {
-    "@bottender/dialogflow": "^1.2.0-alpha.6",
-    "bottender": "^1.2.0-alpha.6",
+    "@bottender/dialogflow": "^1.2.0",
+    "bottender": "^1.2.0",
     "date-fns": "^2.8.1",
-    "dialogflow": "^1.0.0",
     "moment": "^2.24.0"
   },
   "devDependencies": {
